--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -13,12 +13,20 @@
 <body>
 
 <header>
-    <nav class="navbar is-fixed-top is-info centralizar" aria-label="main navigation">
-        <label>
-            HOSPEBEM
-        </label>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" >
+                <p class="titulo-nav">HospeBem</p>
+            </a>
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item " href="/">Voltar</a>
+                </div>
+            </div>
+        </div>
     </nav>
 </header>
+
 <main>
     <div class="container">
         <div class="is-mobile">
@@ -30,12 +38,13 @@
                     </div>
                 </form>
                 <div class="is-mobile is-centered">
+
                     <table class="table pricing__table">
 
 
                         <div class="is-mobile is-centered">
                         </div>
-                        <table class="table centralizar">
+                        <table class="table centralizar" id="solicitacoes">
 
                             <tr>
                                 <th>Nome </th>
@@ -48,32 +57,36 @@
                             </thead>
 
 
-                        <tr th:each="solicitacao : ${solicitacoesHospital}">
-                            <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
-                            <td class="has-text-centered">11-11-2018</td>
-                            <td class="has-text-centered">Pendente</td>
-                            <td class="column has-text-centered">
-                                <a href="/">
-                                    <button class="button" type="submit">
-                                        <i class="fas fa-edit"></i>
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <form method="post">
-                                    <button class="button" type="submit">
-                                        <input type="hidden" name="id">
+                            <tr th:each="solicitacao : ${solicitacoesHospital}">
+                                <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
+                                <td class="has-text-centered">11-11-2018</td>
+                                <td class="has-text-centered">Pendente</td>
+                                <td class="column has-text-centered">
+                                    <a href="/">
+                                        <button class="button" type="submit" onclick="deleteRow(this.parentNode.parentNode.rowIndex)">
+                                            <i class="fas fa-edit"></i>
+                                        </button>
+                                    </a>
+                                </td>
+                                <td>
+                                    <form action="#" th:action ="@{../solicitacao/solicitacaoController}" method="post"></form>
+                                    <button class="button" type="hidden" onclick="deleteRow(this.parentNode.parentNode.rowIndex)">
                                         <i class="fas fa-trash"></i>
                                     </button>
-                                </form>
-                            </td>
-                        </tr>
-                    </table>
+                                </td>
+                            </tr>
+                        </table>
                 </div>
             </div>
         </div>
     </div>
 </main>
+<script type="text/javascript">
+    function deleteRow(i){
+        document.getElementById('solicitacoes').deleteRow(i)
+    }
 
+
+</script>
 </body>
 </html>
