--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -13,14 +13,12 @@
 
     <nav class="navegacao">
         <ul>
-            <a href="/"><li>Início</li></a>
-            <a href="/pessoa/lista"><li>Pessoas</li></a>
-            <a href="/pessoa/cadastro"><li>Cadastrar Pessoa</li></a>
             <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
             <a href="/solicitacao/casa/lista"><li>Lista geral de solicitações casa</li></a>
             <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
             <a href="/solicitacao/gerenciaHospede/listagemHospede"><li>Gerenciar Hospede</li></a>
             <a href="/registrar"><li>Registrar</li></a>
+            <a href="/solicitacao/aceitos"><li>Hóspedes aceitos</li></a>
         </ul>
     </nav>
 </div>
