--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -27,17 +27,14 @@
 
 </header>
 
-
-
     <div class="container">
 
         <div class="columns is-mobile is-centered">
             <div class="column">
                 <h1 class="title is-1 is-half centralizar espacamento">Solicitação de Vaga</h1>
 
-
                 <h2 class="subtitle is-2"> Dados do paciente</h2>
-                <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="POST" onsubmit="return validaCadastroSolicitacao(event)" id="formSolicitacao">
+                <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="POST" onsubmit="return validaCadastroSolicitacao(this)" id="formSolicitacao">
                     <div class="field">
                         <div class="control">
                             <span>*Nome Completo:</span>
@@ -212,7 +209,7 @@
                 </form>
 
 
-                <button class="button is-success is-focused" value="Enviar Solicitação" type="submit" onclick="alert('Solicitacao enviada')">Enviar Solicitação</button>
+                <button class="button is-success is-focused" value="Enviar Solicitação" type="submit" >Enviar Solicitação</button>
 
                 <input class="button" type="reset" value="Limpar Formulário">
 
