<@diovanemendes, @natymoraes, @JulianeMartins> Cria data atualização e arruma layout

--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -8,15 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-                <p class="titulo-nav">HospeBem</p>
-            </a>
-        </div>
-    </nav>
-</header>
+
+<div th:include="partials/cabecalhoCasa"/>
 
 <main>
     <div class="container card-content valign center has-text-centered">
