--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -3,66 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>Hospebem</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.26/css/bulma.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
-<header>
-    <nav class="navbar is-fixed-top is-info has-text-centered nav-style" aria-label="main navigation">
-        <label>
-            HOSPEBEM
-        </label>
-    </nav>
-</header>
 
+<div th:include="partials/cabecalhoCasa"/>
 
-<div class="panel-block is-mobile">
-    <h1 class="padding-bottom">Lista de Solicitações Casa:</h1>
-    <table class="table pricing__table">
-        <tr class="columns">
-            <td class="column has-text-centered">Data</td>
-            <td class="column has-text-centered">Nome</td>
-            <td class="column has-text-centered">Idade</td>
-            <td class="column has-text-centered">Informações</td>
-            <td class="column has-text-centered">Aceitar</td>
-            <td class="column has-text-centered">Negar</td>
-        </tr>
-        <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
-            <div th:if="${solicitacao.cancelamento == false} and ${solicitacao.status != 'Negado'}">
-                <td class="column has-text-centered">19-8-2013</td>
-                <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
-                <td class="column has-text-centered">24</td>
+<main>
+    <div class="container">
+        <div class="columns is-mobile is-centered">
+            <div class="column">
+                <h1 class="title is-half centralizar espacamento">Lista de Solicitações Casa</h1>
 
-                <td class="column has-text-centered">
-                    <form th:action="@{/solicitacao/dados}" method="get">
-                        <input type="hidden" name="id" th:value="${solicitacao.id}">
-                        <button class="button " type="submit">
-                            <i class="fas fa-eye icons-color"></i>
-                        </button>
-                    </form>
-                </td>
+                <div class="columns is-mobile is-centered">
+                    <table class="table centralizar">
+                        <tr class="columns">
+                            <td class="column has-text-centered">Data</td>
+                            <td class="column has-text-centered">Nome</td>
+                            <td class="column has-text-centered">Idade</td>
+                            <td class="column has-text-centered">Informações</td>
+                            <td class="column has-text-centered">Aceitar</td>
+                            <td class="column has-text-centered">Negar</td>
+                        </tr>
+                        <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
+                            <div th:if="${solicitacao.cancelamento == false} and ${solicitacao.status != 'Negado'}">
+                                <td class="column has-text-centered">19-8-2013</td>
+                                <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
+                                <td class="column has-text-centered">24</td>
 
-                <td>
-                    <form th:action="@{/solicitacao/aceitar}" method="post">
-                        <input type="hidden" name="id" th:value="${solicitacao.id}">
-                        <button class="button " type="submit">
-                            <i class="fas fa-check icons-color"></i>
-                        </button>
-                    </form>
-                </td>
+                                <td class="column has-text-centered">
+                                    <form th:action="@{/solicitacao/dados}" method="get">
+                                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                                        <button class="button " type="submit">
+                                            <i class="fas fa-eye icons-color"></i>
+                                        </button>
+                                    </form>
+                                </td>
 
-                <td>
-                    <form th:action="@{/solicitacao/negar}" method="post">
-                        <input type="hidden" name="id" th:value="${solicitacao.id}">
-                        <button class="button" type="submit">
-                            <i class="fas fa-times icons-color"></i>
-                        </button>
-                    </form>
-                </td>
+                                <td>
+                                    <form th:action="@{/solicitacao/aceitar}" method="post">
+                                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                                        <button class="button " type="submit">
+                                            <i class="fas fa-check icons-color"></i>
+                                        </button>
+                                    </form>
+                                </td>
+
+                                <td>
+                                    <form th:action="@{/solicitacao/negar}" method="post">
+                                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                                        <button class="button" type="submit">
+                                            <i class="fas fa-times icons-color"></i>
+                                        </button>
+                                    </form>
+                                </td>
+                            </div>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </tr>
-    </table>
-</div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
